style.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family:Segoe UI, sans-serif;
}

body{
    background:#1b1a1b;
    color:white;
    height:100vh;
    overflow:hidden;
}

.container{
    display:grid;
    grid-template-columns:32% 23% 45%;
    height:100vh;
}

/* ================= LEFT ================= */

.left{
    padding:35px;
}

.left h1{
    color: whitesmoke;
    font-size: 72px;
    font-weight:bold;
    margin-bottom:20px;
}

.left hr{
    border:none;
    height:1px;
    background: white;
    margin-bottom:40px;
}

.categories{
    display:flex;
    flex-direction:column;
    gap:20px;
}

.category{
    background:none;
    border:none;
    color:white;
    font-size:28px;
    text-align:left;
    cursor:pointer;
    transition:.25s;
}

.category:hover{
    color:#cfcfcf;
    transform:translateX(8px);
}

/* ================= MIDDLE ================= */

.middle{
    padding-top:150px;
    padding-left:20px;
    overflow-y:auto;
}

#toolsList{
    display:flex;
    flex-direction:column;
    gap:18px;
}

.tool{
    background:none;
    border:none;
    color:white;
    font-size:24px;
    text-align:left;
    cursor:pointer;
    transition:.25s;
}

.tool:hover{
    transform:translateX(10px);
    color:#d8d8d8;
}

.tool::before{
    content:"➤";
    margin-right:10px;
}

/* ================= RIGHT ================= */

.right{
    padding:170px 70px 50px;
}

.tool-details h2{
    font-size:52px;
    margin-bottom:25px;
    word-break:break-word;
}

.tool-details p{
    font-size:28px;
    color:#dddddd;
    line-height:1.7;
    margin-bottom:70px;
}

.tool-details a{
    color:white;
    text-decoration:none;
    font-size:24px;
    border-bottom:2px solid white;
    padding-bottom:5px;
}

.tool-details a:hover{
    color:#cccccc;
    border-color:#cccccc;
}

/* ================= Scroll ================= */

.middle::-webkit-scrollbar{
    width:8px;
}

.middle::-webkit-scrollbar-thumb{
    background:#666;
    border-radius:10px;
}

.middle::-webkit-scrollbar-track{
    background:transparent;
}

/* ================= Responsive ================= */

@media(max-width:1100px){

    .container{
        grid-template-columns:1fr;
        overflow:auto;
    }

    .middle,
    .right{
        padding:30px;
    }

    .left h1{
        font-size:48px;
    }

    .category{
        font-size:24px;
    }

    .tool{
        font-size:22px;
    }

    .tool-details h2{
        font-size:36px;
    }

    .tool-details p{
        font-size:22px;
    }

}

